src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP009_UP009_1.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: PEP3120UnnecessaryCodingComment
  location:
    row: 2
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 3
      column: 0
    content: ""
    message: ~
  parent: ~

