src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP010_UP010.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UnnecessaryFutureImport:
      - generators
      - nested_scopes
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 48
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 2
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - unicode_literals
      - with_statement
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 55
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 3
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - absolute_import
      - division
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 48
  fix:
    location:
      row: 3
      column: 0
    end_location:
      row: 4
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 37
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 5
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generator_stop
      - print_function
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 53
  fix:
    location:
      row: 5
      column: 0
    end_location:
      row: 6
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 49
  fix:
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 49
    content: from __future__ import invalid_module
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 41
  fix:
    location:
      row: 9
      column: 0
    end_location:
      row: 10
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 37
  fix:
    location:
      row: 10
      column: 4
    end_location:
      row: 10
      column: 37
    content: pass
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 41
  fix:
    location:
      row: 13
      column: 0
    end_location:
      row: 14
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 53
  fix:
    location:
      row: 14
      column: 4
    end_location:
      row: 14
      column: 53
    content: from __future__ import invalid_module
    message: ~
  parent: ~

