src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP012_UP012.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: UnnecessaryEncodeUTF8
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 21
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 21
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 18
  fix:
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 18
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 14
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 20
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 22
  fix:
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 22
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 30
  fix:
    location:
      row: 7
      column: 0
    end_location:
      row: 7
      column: 30
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 8
    column: 0
  end_location:
    row: 14
    column: 1
  fix:
    location:
      row: 8
      column: 0
    end_location:
      row: 14
      column: 1
    content: "b\"\"\"\nLorem\n\nIpsum\n\"\"\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 27
  fix:
    location:
      row: 26
      column: 19
    end_location:
      row: 26
      column: 26
    content: ""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 31
  fix:
    location:
      row: 44
      column: 23
    end_location:
      row: 44
      column: 30
    content: ""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 46
    column: 0
  end_location:
    row: 46
    column: 39
  fix:
    location:
      row: 46
      column: 23
    end_location:
      row: 46
      column: 38
    content: ""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 48
    column: 0
  end_location:
    row: 48
    column: 23
  fix:
    location:
      row: 48
      column: 0
    end_location:
      row: 48
      column: 23
    content: "br\"fo\\o\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 49
    column: 0
  end_location:
    row: 49
    column: 22
  fix:
    location:
      row: 49
      column: 0
    end_location:
      row: 49
      column: 22
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 50
    column: 0
  end_location:
    row: 50
    column: 23
  fix:
    location:
      row: 50
      column: 0
    end_location:
      row: 50
      column: 23
    content: "bR\"fo\\o\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 51
    column: 0
  end_location:
    row: 51
    column: 22
  fix:
    location:
      row: 51
      column: 0
    end_location:
      row: 51
      column: 22
    content: "b\"foo\""
    message: ~
  parent: ~
- kind: UnnecessaryEncodeUTF8
  location:
    row: 52
    column: 6
  end_location:
    row: 52
    column: 20
  fix:
    location:
      row: 52
      column: 6
    end_location:
      row: 52
      column: 20
    content: "b\"foo\""
    message: ~
  parent: ~

