src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP013_UP013.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    ConvertTypedDictFunctionalToClass: MyType1
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 52
  fix:
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 52
    content: "class MyType1(TypedDict):\n    a: int\n    b: str"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType2
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 50
  fix:
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 50
    content: "class MyType2(TypedDict):\n    a: int\n    b: str"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType3
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 44
  fix:
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 44
    content: "class MyType3(TypedDict):\n    a: int\n    b: str"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType4
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 30
  fix:
    location:
      row: 14
      column: 0
    end_location:
      row: 14
      column: 30
    content: "class MyType4(TypedDict):\n    pass"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType5
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 46
  fix:
    location:
      row: 17
      column: 0
    end_location:
      row: 17
      column: 46
    content: "class MyType5(TypedDict):\n    a: \"hello\""
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType6
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 41
  fix:
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 41
    content: "class MyType6(TypedDict):\n    a: \"hello\""
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType7
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 56
  fix:
    location:
      row: 21
      column: 0
    end_location:
      row: 21
      column: 56
    content: "class MyType7(TypedDict):\n    a: NotRequired[dict]"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType8
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 65
  fix:
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 65
    content: "class MyType8(TypedDict, total=False):\n    x: int\n    y: int"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType10
  location:
    row: 30
    column: 0
  end_location:
    row: 30
    column: 59
  fix:
    location:
      row: 30
      column: 0
    end_location:
      row: 30
      column: 59
    content: "class MyType10(TypedDict):\n    key: Literal[\"value\"]"
    message: ~
  parent: ~
- kind:
    ConvertTypedDictFunctionalToClass: MyType11
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 53
  fix:
    location:
      row: 33
      column: 0
    end_location:
      row: 33
      column: 53
    content: "class MyType11(typing.TypedDict):\n    key: int"
    message: ~
  parent: ~

