src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP014_UP014.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    ConvertNamedTupleFunctionalToClass: NT1
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 61
  fix:
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 61
    content: "class NT1(NamedTuple):\n    a: int\n    b: tuple[str, ...]"
    message: ~
  parent: ~
- kind:
    ConvertNamedTupleFunctionalToClass: NT2
  location:
    row: 8
    column: 0
  end_location:
    row: 12
    column: 1
  fix:
    location:
      row: 8
      column: 0
    end_location:
      row: 12
      column: 1
    content: "class NT2(NamedTuple):\n    a: int\n    b: str = \"foo\"\n    c: list[bool] = [True]"
    message: ~
  parent: ~
- kind:
    ConvertNamedTupleFunctionalToClass: NT3
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 56
  fix:
    location:
      row: 15
      column: 0
    end_location:
      row: 15
      column: 56
    content: "class NT3(typing.NamedTuple):\n    a: int\n    b: str"
    message: ~
  parent: ~

