src/pyupgrade/snapshots/ruff__pyupgrade__tests__UP019_UP019.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: TypingTextStrAlias
  location:
    row: 7
    column: 21
  end_location:
    row: 7
    column: 25
  fix:
    location:
      row: 7
      column: 21
    end_location:
      row: 7
      column: 25
    content: str
    message: ~
  parent: ~
- kind: TypingTextStrAlias
  location:
    row: 11
    column: 28
  end_location:
    row: 11
    column: 39
  fix:
    location:
      row: 11
      column: 28
    end_location:
      row: 11
      column: 39
    content: str
    message: ~
  parent: ~
- kind: TypingTextStrAlias
  location:
    row: 15
    column: 27
  end_location:
    row: 15
    column: 37
  fix:
    location:
      row: 15
      column: 27
    end_location:
      row: 15
      column: 37
    content: str
    message: ~
  parent: ~
- kind: TypingTextStrAlias
  location:
    row: 19
    column: 28
  end_location:
    row: 19
    column: 35
  fix:
    location:
      row: 19
      column: 28
    end_location:
      row: 19
      column: 35
    content: str
    message: ~
  parent: ~

